# kitsu.rs

./: Cargo.toml  LICENSE  README.md
src/: kitsu.rs  main.rs  model.rs
src/kitsu/: client.rs  error.rs  lib.rs  model.rs
