[package]
name = "kitsu-rs"
version = "0.1.0"
edition = "2021"
description = "Unofficial Rust client for kitsu.io"
repository = "https://github.com/Twometer/kitsu.rs"
license = "MIT"
authors = ["Twometer"]

[lib]
name = "kitsu_rs"
path = "src/kitsu/lib.rs"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2.1"
anyhow = "1.0"
